tests/fixtures/LatestTests/TypeConversionFunctionTests/errors/decimal32_no_argument.fg
/; EXPECT_ERROR: FunctionArgumentCountMismatch
print(Decimal32())

